--- a/food_calculator/styles.css
+++ b/food_calculator/styles.css
@@ -1,18 +1,26 @@
+/* Body & Global Styles */
 body {
   background-color: #bd9a79;
   color: #433120;
 }
 
-@media only screen and (max-width: 700px) {
-  #overlay {
-    background-color: rgba(0, 0, 0, 0);
-  }
-
-  body {
-    margin: 0 !important;
-  }
+p {
+  font-weight: 500;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+  margin-left: 0.5rem;
 }
 
+hr {
+  width: 100%;
+  border: 0;
+  border-top: 2px solid white;
+  opacity: 0.5;
+  margin: 0;
+  color: white;
+}
+
+/* Headings */
 h1 {
   background-color: rgb(119, 80, 54);
   color: #F3C24A;
@@ -26,6 +34,7 @@ h2 {
   font-size: 1.4rem;
 }
 
+/* Collapse Sections */
 .collapse-header {
   color: #F3C24A;
   font-weight: bolder;
@@ -34,7 +43,6 @@ h2 {
   padding: 10px;
   margin: 0;
   user-select: none;
-  display: flex;
   justify-content: space-between;
   align-items: center;
 }
@@ -53,6 +61,25 @@ h2 {
   padding-bottom: 10px;
 }
 
+.result .collapse {
+  padding-bottom: 0;
+}
+
+#buildings-container {
+  background-color: rgb(180, 127, 92);
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  overflow: hidden;
+}
+
+.buildings-header {
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
+/* Results & Warnings */
 .results {
   color: white;
   font-weight: bolder;
@@ -65,6 +92,7 @@ h2 {
   font-weight: bold;
 }
 
+/* Containers & Layout */
 .container {
   background-color: rgb(67, 51, 38);
   display: flex;
@@ -73,6 +101,11 @@ h2 {
   margin-top: 0 !important;
 }
 
+.row {
+  --bs-gutter-x: 0rem;
+}
+
+/* Boxes */
 .box {
   display: flex;
   align-items: stretch;
@@ -84,10 +117,7 @@ h2 {
   border: 2px solid white;
   margin-right: 10px;
   margin-left: 10px;
-}
-
-.box:hover {
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
 }
 
 .box-icon {
@@ -103,16 +133,15 @@ h2 {
 }
 
 .box-icon img {
-  max-width: 60px;
-  max-height: 60px;
   transition: transform 0.3s ease;
+  height: auto;
+  width: 70%;
 }
 
 .box-content {
   flex: 1;
   flex-direction: column;
   justify-content: space-between;
-  padding: 10px;
   position: relative;
   background-color: rgb(145, 98, 65);
   min-height: 100px;
@@ -125,13 +154,25 @@ h2 {
   margin: 0;
   font-weight: bold;
   color: white;
+  padding: 4px;
+}
+
+.box-text {
+  padding: 8px;
+  border-top: 2px solid #ffffff;
+}
+
+.box-text p {
+font-weight: bold;
 }
 
 .box-content hr {
   width: 100%;
   border: 0;
   border-top: 2px solid white;
-  margin: 2px 0 5px;
+  opacity: 0.5;
+  margin: 0;
+  color: white;
 }
 
 .box-content p {
@@ -140,13 +181,119 @@ h2 {
   color: white;
 }
 
-p {
-  font-weight: 500;
-}
-
 .box[disabled] {
   pointer-events: none;
   opacity: 0.5;
+}
+
+.dragging {
+  opacity: 0.5;
+  transform: scale(1.05);
+}
+
+/* Forms */
+.form-select,
+.form-select option,
+.form-control,
+.select {
+  display: flex;
+  width: 100%;
+  font-weight: bold;
+  padding: 8px;
+  box-sizing: border-box;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  margin-left: 0;
+  font-size: 15px;
+  background-color: #f3e0c2;
+  color: #3e2a16;
+  border: 2px solid #bd9a79;
+  border-radius: 8px;
+}
+
+.form-select:disabled,
+form-control:disabled {
+  filter: brightness(80%);
+  cursor: not-allowed;
+}
+
+.form-select:focus,
+.form-control:focus {
+  box-shadow: 0 0 0 0.2rem rgba(243, 194, 74, 0.5);
+  border-color: #f3c24a;
+  outline: none;
+  background-color: #f3e0c2;
+}
+
+.fixSelector {
+  width: auto;
+  background-color: rgb(145, 98, 65);
+  color: white;
+  font-weight: bolder;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  margin-left: 0;
+  font-size: 16px;
+  min-width: 150px;
+  font-weight: bold;
+}
+
+.levelSelector{
+    min-width: auto;
+}
+
+.fixSelector option {
+  width: auto;
+  color: white;
+  font-weight: bold;
+}
+
+.fixSelector:focus {
+  border-color: #f3c24a;
+  outline: none;
+}
+
+.form-group {
+  color: white;
+  font-size: 25px;
+  font-weight: bolder;
+}
+
+label {
+  color: #ffffff;
+  font-size: 16px;
+}
+
+.calculator-bonuses-form .form-group {
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+/* Scrollbar */
+::-webkit-scrollbar {
+  width: 10px;
+  background-color: #f2d9bb;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #bd9a79;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #f2d9bb;
+}
+
+/* Media Queries */
+@media only screen and (max-width: 700px) {
+  #overlay {
+    background-color: rgba(0, 0, 0, 0);
+  }
+
+  body {
+    margin: 0 !important;
+  }
 }
 
 @media (hover: none) {
@@ -165,94 +312,7 @@ p {
   }
 }
 
-.form-control2,
-.select {
-  display: flex;
-  width: 140px;
-  background-color: rgb(234, 208, 178);
-  color: black;
-  font-weight: bolder;
-  border: 1px solid #ccc;
-  padding: 8px;
-  box-sizing: border-box;
-  border-radius: 4px;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  margin-left: 0;
-  font-size: 15px;
-}
-
-.form-group {
-  color: white;
-  font-size: 25px;
-  font-weight: bolder;
-}
-
-label {
-  color: #ffffff;
-  font-size: 16px;
-}
-
-.row {
-  --bs-gutter-x: 0rem;
-}
-
-::-webkit-scrollbar {
-  width: 10px;
-  background-color: #f2d9bb;
-}
-
-::-webkit-scrollbar-thumb {
-  background-color: #bd9a79;
-  border-radius: 5px;
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background-color: #f2d9bb;
-}
-
-hr {
-  margin: 0;
-}
-
-p {
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
-  margin-left: 0.5rem;
-}
-
-.calculator-bonuses-form .form-group {
-  padding-left: 10px;
-}
-
-.result .collapse {
-  padding-bottom: 0;
-}
-
-.fixSelector{
-  width: auto;
-  background-color: rgb(145, 98, 65);
-  color: white;
-  font-weight: bolder;
-  border: 1px solid #ccc;
-  max-width: 160px;
-  border-radius: 4px;
-  margin-left: 0;
-  font-size: 16px;
-}
-
-.box {
-  cursor: pointer;
-  transition: transform 0.3s ease-in-out;
-}
-
-.dragging {
-  opacity: 0.5;
-  transform: scale(1.05);
-}
-
-/* Home button */
+/* Home Button */
 .home-icon-link {
   position: fixed;
   right: 10px;
@@ -285,4 +345,37 @@ p {
 
 .home-icon-link .home-icon i {
   color: #f8bc00;
+}
+
+/* Info button */
+.info-tooltip {
+  display: inline-block;
+  position: relative;
+  margin-left: 15px;
+  color: #f3c24a;
+  cursor: pointer;
+}
+
+.info-tooltip .tooltip-text {
+  visibility: hidden;
+  width: 265px;
+  background-color: #433120;
+  color: #f3c24a;
+  text-align: center;
+  padding: 4px 6px;
+  border-radius: 6px;
+  position: absolute;
+  z-index: 100;
+  top: 125%;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 14px;
+  line-height: 1.3;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.info-tooltip:hover .tooltip-text {
+  visibility: visible;
+  opacity: 1;
 }
