--- a/layout_editor/styles.css
+++ b/layout_editor/styles.css
@@ -1,381 +1,612 @@
-/* Body & Global Styles */
-body {
-  background-color: #bd9a79;
-  color: #433120;
+/* ===== GENERAL RESET & SCROLLBAR ===== */
+* {
+    touch-action: manipulation;
 }
 
-p {
-  font-weight: 500;
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
-  margin-left: 0.5rem;
-}
-
-hr {
-  width: 100%;
-  border: 0;
-  border-top: 2px solid white;
-  opacity: 0.5;
-  margin: 0;
-  color: white;
-}
-
-/* Headings */
-h1 {
-  background-color: rgb(119, 80, 54);
-  color: #F3C24A;
-  padding: 4px;
-  border-radius: 10px;
-  font-weight: bolder;
-  text-align: center;
-}
-
-h2 {
-  font-size: 1.4rem;
-}
-
-/* Collapse Sections */
-.collapse-header {
-  color: #F3C24A;
-  font-weight: bolder;
-  background-color: rgb(119, 80, 54);
-  border-radius: 10px 10px 0 0;
-  padding: 10px;
-  margin: 0;
-  user-select: none;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.header-title {
-  margin: 0;
-}
-
-.collapse-area {
-  background-color: rgb(180, 127, 92);
-  border-radius: 10px;
-  overflow: hidden;
-}
-
-.collapse {
-  padding-bottom: 10px;
-}
-
-.result .collapse {
-  padding-bottom: 0;
-}
-
-#buildings-container {
-  background-color: rgb(180, 127, 92);
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
-  overflow: hidden;
-}
-
-.buildings-header {
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-  border-bottom-left-radius: 0;
-  border-bottom-right-radius: 0;
-}
-
-/* Results & Warnings */
-.results {
-  color: white;
-  font-weight: bolder;
-  font-size: large;
-}
-
-.warning-icon {
-  font-size: 30px;
-  margin-right: 20px;
-  font-weight: bold;
-}
-
-/* Containers & Layout */
-.container {
-  background-color: rgb(67, 51, 38);
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  margin-top: 0 !important;
-}
-
-.row {
-  --bs-gutter-x: 0rem;
-}
-
-/* Boxes */
-.box {
-  display: flex;
-  align-items: stretch;
-  border-radius: 30px;
-  margin-bottom: 10px;
-  text-decoration: none;
-  color: #000;
-  transition: box-shadow 0.3s ease, transform 0.3s ease;
-  border: 2px solid white;
-  margin-right: 10px;
-  margin-left: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
-}
-
-.box-icon {
-  flex: 0 0 80px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-right: 2px solid white;
-  margin: 0;
-  background-color: rgb(145, 98, 65);
-  border-top-left-radius: 30px;
-  border-bottom-left-radius: 30px;
-}
-
-.box-icon img {
-  transition: transform 0.3s ease;
-  height: auto;
-  width: 70%;
-}
-
-.box-content {
-  flex: 1;
-  flex-direction: column;
-  justify-content: space-between;
-  position: relative;
-  background-color: rgb(145, 98, 65);
-  min-height: 100px;
-  border-top-right-radius: 30px;
-  border-bottom-right-radius: 30px;
-}
-
-.box-content h2 {
-  font-size: 18px;
-  margin: 0;
-  font-weight: bold;
-  color: white;
-  padding: 4px;
-}
-
-.box-text {
-  padding: 8px;
-  border-top: 2px solid #ffffff;
-}
-
-.box-text p {
-font-weight: bold;
-}
-
-.box-content hr {
-  width: 100%;
-  border: 0;
-  border-top: 2px solid white;
-  opacity: 0.5;
-  margin: 0;
-  color: white;
-}
-
-.box-content p {
-  margin: 0;
-  font-size: 14px;
-  color: white;
-}
-
-.box[disabled] {
-  pointer-events: none;
-  opacity: 0.5;
-}
-
-.dragging {
-  opacity: 0.5;
-  transform: scale(1.05);
-}
-
-/* Forms */
-.form-select,
-.form-select option,
-.form-control,
-.select {
-  display: flex;
-  width: 100%;
-  font-weight: bold;
-  padding: 8px;
-  box-sizing: border-box;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  margin-left: 0;
-  font-size: 15px;
-  background-color: #f3e0c2;
-  color: #3e2a16;
-  border: 2px solid #bd9a79;
-  border-radius: 8px;
-}
-
-.form-select:disabled,
-form-control:disabled {
-  filter: brightness(80%);
-  cursor: not-allowed;
-}
-
-.form-select:focus,
-.form-control:focus {
-  box-shadow: 0 0 0 0.2rem rgba(243, 194, 74, 0.5);
-  border-color: #f3c24a;
-  outline: none;
-  background-color: #f3e0c2;
-}
-
-.fixSelector {
-  width: auto;
-  background-color: rgb(145, 98, 65);
-  color: white;
-  font-weight: bolder;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  margin-left: 0;
-  font-size: 16px;
-  min-width: 150px;
-  font-weight: bold;
-}
-
-.levelSelector{
-    min-width: auto;
-}
-
-.fixSelector option {
-  width: auto;
-  color: white;
-  font-weight: bold;
-}
-
-.fixSelector:focus {
-  border-color: #f3c24a;
-  outline: none;
-}
-
-.form-group {
-  color: white;
-  font-size: 22px;
-  font-weight: bolder;
-}
-
-label {
-  color: #ffffff;
-  font-size: 16px;
-}
-
-.calculator-bonuses-form .form-group {
-  padding-left: 5px;
-  padding-right: 5px;
-}
-
-/* Scrollbar */
 ::-webkit-scrollbar {
-  width: 10px;
-  background-color: #f2d9bb;
+    width: 10px;
+    background-color: #f2d9bb;
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #bd9a79;
-  border-radius: 5px;
+    background-color: #bd9a79;
+    border-radius: 5px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: #f2d9bb;
+    background-color: #f2d9bb;
 }
 
-/* Media Queries */
-@media only screen and (max-width: 700px) {
-  #overlay {
-    background-color: rgba(0, 0, 0, 0);
-  }
 
-  body {
-    margin: 0 !important;
-  }
+/* ===== BODY & LAYOUT ===== */
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100vh;
+    background-color: #bd9a79;
+    color: #433120;
 }
 
-@media (hover: none) {
-  .box-icon img {
-    transform: none !important;
-  }
-
-  .box:hover {
-    transform: none !important;
-  }
+.container {
+    position: relative;
+    width: calc(60 * 14.4px);
+    height: calc(60 * 14.4px);
+    border: none;
+    box-shadow: 0 0 0 2px #000;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.15);
+    padding: 0;
+    margin-top: 3vh;
 }
 
-@media only screen and (max-width: 1024px) {
-  .container {
-    min-width: fit-content;
-  }
+.container::-webkit-scrollbar {
+    display: none;
 }
 
-/* Home Button */
-.home-icon-link {
-  position: fixed;
-  right: 10px;
-  top: 95%;
-  transform: translateY(-50%);
-  width: 50px;
-  height: 50px;
-  z-index: 1000;
-  text-decoration: none;
-  opacity: 0.8;
-  transition: opacity 0.3s ease-in-out;
+.grid {
+    display: grid;
+    grid-template-columns: repeat(60, 1fr);
 }
 
-.home-icon {
-  background-color: #7e4606;
-  border: 1px solid #f8bc00;
-  border-radius: 50%;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+.gridExpand .container {
+    width: calc(70 * 14.4px);
 }
 
-.home-icon i {
-  color: #4c473b;
-  font-size: 18px;
+.gridExpand .grid {
+    grid-template-rows: repeat(1, 1fr);
+    grid-template-columns: repeat(70, 1fr);
 }
 
-.home-icon-link .home-icon i {
-  color: #f8bc00;
+.cell {
+    width: 14.4px;
+    height: 14.4px;
+    box-sizing: border-box;
+    border: 1px solid rgba(0, 0, 0, 0.5);
 }
 
-/* Info button */
-.info-tooltip {
-  display: inline-block;
-  position: relative;
-  margin-left: 15px;
-  color: #f3c24a;
-  cursor: pointer;
+
+/* ===== BUILDING ===== */
+.building {
+    position: absolute;
+    user-select: none;
+    z-index: 1;
+    border: 2px solid rgba(0, 0, 0, 0.5);
+    color: rgba(0, 0, 0, 0.8);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    font-size: 13px;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+    font-weight: bolder;
 }
 
-.info-tooltip .tooltip-text {
-  visibility: hidden;
-  width: 265px;
-  background-color: #433120;
-  color: #f3c24a;
-  text-align: center;
-  padding: 4px 6px;
-  border-radius: 6px;
-  position: absolute;
-  z-index: 100;
-  top: 125%;
-  left: 50%;
-  transform: translateX(-50%);
-  font-size: 14px;
-  line-height: 1.3;
-  opacity: 0;
-  transition: opacity 0.3s;
+.building div {
+    word-break: break-word;
+    white-space: pre-line;
 }
 
-.info-tooltip:hover .tooltip-text {
-  visibility: visible;
-  opacity: 1;
+.transparent-mode .building {
+    opacity: 0.75;
+}
+
+
+/* ===== MODAL WINDOWS ===== */
+.modal-backdrop {
+    position: fixed !important;
+    top: 0 !important;
+    left: 0 !important;
+    width: 100% !important;
+    height: 100% !important;
+    background-color: rgba(0, 0, 0, 0.5) !important;
+}
+
+.modal-content {
+    background-color: #433120;
+    color: #EAD0B2;
+    max-height: 500px;
+    min-height: 500px;
+    position: relative;
+}
+
+.modal-header,
+.modal-footer {
+    border-color: #443326;
+    padding: 0%;
+}
+
+.modal-header {
+    position: sticky;
+    top: 0;
+    z-index: 1050;
+    background-color: rgb(119, 80, 54);
+    color: #EAD0B2;
+    padding: 3px;
+    display: block;
+}
+
+.modal-header.pt-2.pb-2 {
+    border-top: 1px solid #443326;
+    border-bottom: 1px solid #443326;
+    border-radius: 0;
+}
+
+.modal-title {
+    color: #F3C24A;
+    font-weight: bolder;
+    font-size: 30px;
+    margin-left: 10px;
+}
+
+.modal-body {
+    background-color: rgb(80, 59, 44);
+    overflow: auto;
+}
+
+.color-square {
+    width: 18px;
+    height: 18px;
+    display: flex;
+    margin-right: 5px;
+    margin-left: 5px;
+    margin-top: 5px;
+    border-radius: 50%;
+    border: 1px solid black;
+}
+
+.remove-building-btn,
+.settings-container .btn,
+.slot-item .btn {
+    background: none;
+    border: none;
+    color: #e0b044;
+    padding: 0;
+    font-weight: bolder;
+    font-size: 14px;
+}
+
+.remove-building-btn:hover,
+.settings-container .btn:hover,
+.slot-item .btn:hover {
+    color: #F3C24A;
+}
+
+.slot-item,
+.building-info {
+    background-color: rgb(145, 98, 65);
+    border-top: 1px solid #443326;
+    border-bottom: 1px solid #443326;
+    border-radius: 0;
+    display: flex;
+    align-items: center;
+    font-weight: bolder;
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+}
+
+.modal-header.pt-2.pb-2 .row {
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+}
+
+
+/* ===== BUTTONS & NAVBAR ===== */
+.bottom-buttons-container {
+    background-color: #443326;
+    padding-left: 10px;
+    padding-right: 10px;
+    border: 2px solid rgba(234, 208, 178, 0.5);
+    display: flex;
+    gap: 0px;
+    position: fixed;
+    bottom: 0px !important;
+    left: 50% !important;
+    top: 91% !important;
+    transform: translateX(-50%) !important;
+    z-index: 1000;
+    border-radius: 20px;
+}
+
+.bottom-buttons-container .btn {
+    background: none;
+    border: none;
+    color: #EAD0B2;
+}
+
+.bottom-buttons-container .btn:hover {
+    color: rgb(243, 194, 74);
+}
+
+.vr {
+    border-left: 2px solid white;
+    opacity: 50%;
+}
+
+
+/* ===== FORMS & INPUTS ===== */
+.custom-input,
+.custom-select,
+.custom-button {
+    background-color: #f3e0c2;
+    color: #3e2a16;
+    border: 2px solid #bd9a79;
+    font-weight: bold;
+    border-radius: 8px;
+}
+
+.custom-input::placeholder {
+    color: #8d7155;
+}
+
+.custom-input:focus,
+.custom-select:focus,
+.custom-button:focus {
+    box-shadow: 0 0 0 0.2rem rgba(243, 194, 74, 0.5);
+    border-color: #f3c24a;
+    outline: none;
+}
+
+#searchInput,
+#sortSelect,
+.btn-custom {
+    background-color: #f2d9bb !important;
+    color: #433120 !important;
+    border: 2px solid #a97c50;
+    font-weight: bold;
+}
+
+.dropdown-menu-custom {
+    background-color: #f3e0c2;
+    max-height: 350px;
+    overflow-y: auto;
+    border: 2px solid #a97c50;
+    padding: 5px;
+    border-radius: 8px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
+}
+
+.dropdown-menu .form-check:hover {
+  background-color: rgba(243, 194, 74, 0.25);
+}
+
+.dropdown-menu-custom li {
+    list-style: none;
+}
+
+.form-check {
+    margin-bottom: 0px;
+}
+
+.dropdown-menu-custom .form-check-input {
+    border: 2px solid #a97c50;
+    background-color: white;
+}
+
+.dropdown-menu-custom .form-check-input:checked {
+    background-color: #f3c24a;
+    border-color: #f3c24a;
+}
+
+.dropdown-menu-custom .form-check-label {
+    color: #433120;
+    font-weight: bold;
+}
+
+.btn.dropdown-toggle::after {
+    display: none !important;
+}
+
+.custom-button .bi-funnel {
+    font-weight: bolder;
+    color: #433120;
+}
+
+.save-button {
+    background-color: rgb(80, 59, 44);
+    ;
+    border: 1px solid #e0b044;
+    color: #e0b044;
+    padding: 6px 12px;
+    border-radius: 6px;
+    cursor: pointer;
+    font-weight: bold;
+    transition: background-color 0.2s, color 0.2s, border-color 0.2s;
+}
+
+.save-button:hover {
+    background-color: #5a3f1f;
+    color: #F3C24A;
+    border-color: #F3C24A;
+}
+
+.form-group {
+    margin-top: 15px;
+    color: white;
+    font-size: 25px;
+    font-weight: bolder;
+    min-height: 50px;
+}
+
+#buildingSearch,
+.slot-name {
+    background-color: #f2d9bb !important;
+    color: #433120 !important;
+    border: 2px solid #a97c50 !important;
+    font-weight: bold;
+}
+
+#buildingSearch:focus,
+#sortSelect:focus,
+.btn-custom:focus,
+.slot-name:focus {
+    border-color: #f3c24a;
+    box-shadow: 0 0 0 0.2rem rgba(243, 194, 74, 0.25);
+    outline: none;
+}
+
+.form-control:focus,
+.select {
+    background-color: #a77452;
+    border-color: #6b4f3e;
+    outline: none;
+}
+
+#color-picker {
+    margin-left: 5px;
+}
+
+#presetSizes {
+    padding: 8px;
+    font-size: 16px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    margin-top: 10px;
+}
+
+#presetSizes option {
+    padding: 8px;
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.form-select,
+.form-select option {
+    background-color: #f2d9bb;
+    color: #433120;
+    border: 2px solid #a97c50;
+    font-weight: bold;
+}
+
+
+/* ===== SLIDER ===== */
+.slider-container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.slider {
+    width: 100%;
+    height: 15px;
+    border-radius: 5px;
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    transition: opacity .2s;
+}
+
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: #4CAF50;
+    cursor: pointer;
+}
+
+
+/* ===== BOX CARDS ===== */
+.buildingList {
+    min-height: 600px !important;
+}
+
+.box {
+    display: flex;
+    align-items: stretch;
+    border-radius: 15px;
+    margin-bottom: 10px;
+    text-decoration: none;
+    color: #000;
+    transition: box-shadow 0.3s ease, transform 0.3s ease;
+    border: 2px solid white;
+    cursor: pointer;
+}
+
+.box:hover {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transform: scale(1.05);
+}
+
+.box-icon {
+    flex: 0 0 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-right: 2px solid white;
+    background-color: rgb(145, 98, 65);
+    border-top-left-radius: 15px;
+    border-bottom-left-radius: 15px;
+}
+
+.box-icon img {
+    max-width: 60px;
+    max-height: 60px;
+    transition: transform 0.3s ease;
+}
+
+.box-content {
+    flex: 1;
+    flex-direction: column;
+    justify-content: space-between;
+    position: relative;
+    background-color: rgb(145, 98, 65);
+    min-height: 100px;
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
+}
+
+.box-content h2 {
+    font-size: 18px;
+    margin: 0;
+    font-weight: bold;
+    color: white;
+    padding: 3px;
+}
+
+.box-content hr {
+    width: 100%;
+    border: 0;
+    border-top: 2px solid white;
+    opacity: 0.5;
+    margin: 0;
+    color: white;
+}
+
+.box-content p {
+    margin: 0;
+    font-size: 14px;
+    color: white;
+    padding: 3px;
+}
+
+/* ===== TOP ICONS & CREATE BUTTON ===== */
+.top-icons {
+    position: fixed;
+    top: 10px;
+    left: 10px;
+    z-index: 1000;
+    display: flex;
+    gap: 10px;
+}
+
+.top-icons button {
+    border: none;
+    background: none;
+    cursor: pointer;
+}
+
+.top-icons img {
+    width: 40px;
+    height: 40px;
+}
+
+.create-button-container {
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    z-index: 1000;
+}
+
+.create-button {
+    color: #fff;
+    background-color: #F3C24A;
+    border: none;
+    font-size: 24px;
+    font-weight: bold;
+    padding: 10px 20px;
+    border-radius: 50px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.create-button:hover {
+    background-color: #e0b044;
+}
+
+button.disabled {
+    opacity: 0.5;
+    pointer-events: none;
+    cursor: not-allowed;
+}
+
+
+/* ===== OVERLAY & UTILS ===== */
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+    color: #fff;
+    font-size: 24px;
+}
+
+
+/* ===== MEDIA QUERIES ===== */
+@media (min-width: 980px) {
+    .bottom-buttons-container .btn {
+        transform: scale(1);
+    }
+
+    .modal-content {
+        transform: scale(1) !important;
+    }
+}
+
+@media (max-width: 980px) {
+    .modal-content {
+        max-height: 500px;
+        min-height: 500px;
+        transform: scale(1.8) !important;
+    }
+
+    .grid,
+    .container {
+        white-space: nowrap;
+        -webkit-overflow-scrolling: touch;
+        position: relative;
+        overflow-x: hidden;
+        overflow-y: hidden;
+        touch-action: pinch-zoom;
+    }
+
+    .building {
+        position: absolute;
+        touch-action: none;
+        font-size: 14px;
+    }
+
+    .bottom-buttons-container {
+        width: 100%;
+        justify-content: space-between;
+        padding: 2px;
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        z-index: 1000;
+        border-radius: 0px !important;
+    }
+
+    .bottom-buttons-container .btn {
+        flex: 1;
+        text-align: center;
+    }
+}
+
+@media (min-width: 576px) {
+    .container {
+        max-width: unset !important;
+    }
 }
