--- a/assets_downloader/styles.css
+++ b/assets_downloader/styles.css
@@ -1,18 +1,14 @@
+/* Global styles */
 body {
     background-color: #bd9a79;
     color: #433120;
 }
 
-@media only screen and (max-width: 700px) {
-    #overlay {
-        background-color: rgba(0, 0, 0, 0);
-    }
-
-    body {
-        margin: 0 !important;
-    }
+.row {
+    --bs-gutter-x: 0rem;
 }
 
+/* Headings */
 h1 {
     background-color: rgb(119, 80, 54);
     color: #F3C24A;
@@ -26,6 +22,16 @@ h2 {
     font-size: 1.4rem;
 }
 
+/* Main container */
+.container {
+    background-color: rgb(67, 51, 38);
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    margin-top: 0 !important;
+}
+
+/* Section headers */
 .collapse-header {
     color: #F3C24A;
     font-weight: bolder;
@@ -53,178 +59,7 @@ h2 {
     padding-bottom: 10px;
 }
 
-.results {
-    color: white;
-    font-weight: bolder;
-    font-size: large;
-}
-
-.warning-icon {
-    font-size: 30px;
-    margin-right: 20px;
-    font-weight: bold;
-}
-
-.container {
-    background-color: rgb(67, 51, 38);
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    margin-top: 0 !important;
-}
-
-.box {
-    display: flex;
-    align-items: stretch;
-    border-radius: 30px;
-    margin-bottom: 10px;
-    text-decoration: none;
-    color: #000;
-    transition: box-shadow 0.3s ease, transform 0.3s ease;
-    border: 2px solid white;
-}
-
-.box:hover {
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    transform: scale(1.05);
-}
-
-.box-icon {
-    flex: 0 0 80px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-right: 2px solid white;
-    margin: 0;
-    background-color: rgb(145, 98, 65);
-    border-top-left-radius: 30px;
-    border-bottom-left-radius: 30px;
-}
-
-.box-icon img {
-    max-width: 60px;
-    max-height: 60px;
-    transition: transform 0.3s ease;
-}
-
-.box-content {
-    flex: 1;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 10px;
-    position: relative;
-    background-color: rgb(145, 98, 65);
-    min-height: 100px;
-    border-top-right-radius: 30px;
-    border-bottom-right-radius: 30px;
-}
-
-.box-content h2 {
-    font-size: 18px;
-    margin: 0;
-    font-weight: bold;
-    color: white;
-}
-
-.box-content hr {
-    width: 100%;
-    border: 0;
-    border-top: 2px solid white;
-    margin: 2px 0 5px;
-}
-
-.box-content p {
-    margin: 0;
-    font-size: 14px;
-    color: white;
-}
-
-p {
-    font-weight: 500;
-}
-
-.box[disabled] {
-    pointer-events: none;
-    opacity: 0.5;
-}
-
-@media (hover: none) {
-    .box-icon img {
-        transform: none !important;
-    }
-
-    .box:hover {
-        transform: none !important;
-    }
-}
-
-@media only screen and (max-width: 1024px) {
-    .container {
-        min-width: fit-content;
-    }
-}
-
-.form-control2,
-.select {
-    display: flex;
-    width: 140px;
-    background-color: rgb(234, 208, 178);
-    color: black;
-    font-weight: bolder;
-    border: 1px solid #ccc;
-    padding: 8px;
-    box-sizing: border-box;
-    border-radius: 4px;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    margin-left: 0;
-    font-size: 15px;
-}
-
-.form-group {
-    color: white;
-    font-size: 25px;
-    font-weight: bolder;
-}
-
-label {
-    color: #ffffff;
-    font-size: 16px;
-}
-
-.row {
-    --bs-gutter-x: 0rem;
-}
-
-::-webkit-scrollbar {
-    width: 10px;
-    background-color: #f2d9bb;
-}
-
-::-webkit-scrollbar-thumb {
-    background-color: #bd9a79;
-    border-radius: 5px;
-}
-
-::-webkit-scrollbar-thumb:hover {
-    background-color: #f2d9bb;
-}
-
-hr {
-    margin: 0;
-}
-
-p {
-    margin-top: 0.5rem;
-    margin-bottom: 0.5rem;
-    margin-left: 0.5rem;
-}
-
-.calculator-bonuses-form .form-group {
-    padding-left: 10px;
-}
-
+/* Log output */
 #log {
     max-height: 500px;
     min-height: 500px;
@@ -236,6 +71,7 @@ p {
     white-space: pre-wrap;
 }
 
+/* Progress bar */
 .progress {
     border-radius: 0px;
     height: 25px;
@@ -265,6 +101,7 @@ p {
     font-size: 100%;
 }
 
+/* Buttons */
 .btn {
     font-weight: bold;
     border-radius: 8px;
@@ -277,6 +114,7 @@ p {
     transform: translateY(-1px);
 }
 
+/* Folder select button */
 .custom-folder-button {
     background-color: #f6bb27;
     color: #433120;
@@ -293,6 +131,19 @@ p {
     outline: none;
 }
 
+.custom-folder-button:disabled {
+    color: black;
+    background-color: #f6bb27;
+    border-color: #bd9a79;
+    filter: brightness(60%);
+}
+
+.custom-folder-button:active {
+    background-color: #f6bb27 !important;
+    border-color: #bd9a79 !important;
+}
+
+/* Start button */
 .custom-start-button {
     background-color: #28a745;
     color: black;
@@ -309,6 +160,19 @@ p {
     outline: none;
 }
 
+.custom-start-button:disabled {
+    color: black;
+    background-color: #28a745;
+    border-color: #1e7e34;
+    filter: brightness(60%);
+}
+
+.custom-start-button:active {
+    background-color: #28a745 !important;
+    border-color: #1e7e34 !important;
+}
+
+/* Stop button */
 .custom-stop-button {
     background-color: #dc3545;
     color: black;
@@ -325,10 +189,24 @@ p {
     outline: none;
 }
 
+.custom-stop-button:disabled {
+    color: black;
+    background-color: #dc3545;
+    border-color: #a71d2a;
+    filter: brightness(60%);
+}
+
+.custom-stop-button:active {
+    background-color: #dc3545 !important;
+    border-color: #a71d2a !important;
+}
+
+/* Layout fix for buttons */
 .row.note .col-md-4 {
     padding: 0 5px;
 }
 
+/* Custom checkbox */
 .custom-checkbox {
     display: flex;
     align-items: center;
@@ -363,7 +241,7 @@ p {
     background-color: #f3c24a;
 }
 
-.custom-checkbox input:checked~.checkmark {
+.custom-checkbox input:checked ~ .checkmark {
     background-color: #28a745;
     border-color: #1e7e34;
 }
@@ -374,7 +252,7 @@ p {
     display: none;
 }
 
-.custom-checkbox input:checked~.checkmark:after {
+.custom-checkbox input:checked ~ .checkmark:after {
     display: block;
 }
 
@@ -388,6 +266,7 @@ p {
     transform: rotate(45deg);
 }
 
+/* Responsive adjustments */
 @media (max-width: 768px) {
     .page-title {
         display: none;
@@ -396,6 +275,12 @@ p {
     #log {
         max-height: 350px;
         min-height: 350px;
+    }
+}
+
+@media only screen and (max-width: 1024px) {
+    .container {
+        min-width: fit-content;
     }
 }
 
@@ -426,10 +311,6 @@ p {
 }
 
 .home-icon i {
-    color: #4c473b;
-    font-size: 18px;
-}
-
-.home-icon-link .home-icon i {
     color: #f8bc00;
+    font-size: 18px;
 }
